@@ -1,3 +1,10 @@
+*** Edit md5deep web page
+    - Describe hashdeep in the introduction
+
+*** Create unit test directive/code
+
+*** Write hashdeep quickstart guide
+
 *** Create FAQ
   - Why nothing happens when I double click it
   - Why is this better than one line of shell
@@ -5,6 +12,3 @@
 *** Add support for hashdeep to use NSRL files and other types?
 
 *** Add timestamp mode (-t) to hashdeep
-
-*** Add 'make test' directive to run compiled programs on test files 
-    and ensure compilation was successful. 
