@@ -98,7 +98,7 @@ provide this feature for md5deep are:
 
 <strong> Cygwin: </strong>
 <a href="http://cygwinports.dotsrc.org/">Cygwin Ports</a> 
-(<a href="ftp://sunsite.dk/projects/cygwinports/release/md5deep/">direct link</a>)
+
 
 <br>
 
@@ -109,10 +109,10 @@ provide this feature for md5deep are:
 <br>
 
 <strong> Linux: </strong>
-<a href="http://packages.ubuntu.com/karmic/md5deep">Ubuntu</a>,
+<a href="http://packages.ubuntu.com/lucid/md5deep">Ubuntu</a>,
 <a href="https://admin.fedoraproject.org/pkgdb/packages/name/md5deep">Fedora</a>,
 <a href="http://gentoo-portage.com/app-crypt/md5deep">Gentoo</a>,
-<a href="http://slackbuilds.org/repository/12.2/system/md5deep/">Slackware</a>
+<a href="http://slackbuilds.org/repository/13.0/system/md5deep/">Slackware</a>
 
 <br>
 
